instalacao de angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  inicio de projeto
-</h1>
+<mat-toolbar color="primary">
+  <span>Material App IHC</span>
+
+  <!-- This fills the remaining space of the current row -->
+  <span class="example-fill-remaining-space"></span>
+</mat-toolbar>
